# suave_rosa

./: CMakeLists.txt  LICENSE  README.md  package.xml  rosa_suave.rosinstall  suave_rosa.repos  suave_rosa.rosinstall
.github/workflows/: container.yml
bts/: suave.xml  suave_extended.xml
config/: mission_config.yaml  suave.tql  suave_extended.tql  suave_extension.tql
docker/: Dockerfile  Dockerfile-headless  install_typedb.sh
include/suave_rosa/: action_inspect_pipeline.hpp  action_recharge_battery.hpp  action_search_pipeline.hpp  arm_thrusters.hpp  is_pipeline_found.hpp  is_pipeline_inspected.hpp  set_guided_mode.hpp  suave_mission.hpp
launch/: suave_rosa.launch.py  suave_rosa_extended.launch.py
runner/: rosa_conf_results_run.sh  rosa_paper_results_run.sh  rosa_runner.sh
runner/scripts/: launch_mission.sh  rosa_conf_results_run.sh
src/: suave_rosa.cpp  suave_rosa_extended.cpp
src/suave_rosa/: action_inspect_pipeline.cpp  action_recharge_battery.cpp  action_search_pipeline.cpp  arm_thrusters.cpp  is_pipeline_found.cpp  is_pipeline_inspected.cpp  set_guided_mode.cpp  suave_mission.cpp
suave_rosa/: package.xml  setup.cfg  setup.py
suave_rosa/config/: suave.tql  suave_extended.tql
suave_rosa/launch/: suave_rosa_base.launch.py
suave_rosa_bt/: CMakeLists.txt  package.xml
suave_rosa_bt/bts/: suave.xml  suave_extended.xml
suave_rosa_bt/include/suave_rosa_bt/: action_inspect_pipeline.hpp  action_recharge_battery.hpp  action_search_pipeline.hpp  arm_thrusters.hpp  is_pipeline_found.hpp  is_pipeline_inspected.hpp  set_guided_mode.hpp  suave_mission.hpp  visibility_control.h
suave_rosa_bt/launch/: suave_rosa_bt.launch.py  suave_rosa_extended_bt.launch.py
suave_rosa_bt/src/: suave_rosa_bt.cpp  suave_rosa_bt_extended.cpp
suave_rosa_bt/src/suave_rosa_bt/: action_inspect_pipeline.cpp  action_recharge_battery.cpp  action_search_pipeline.cpp  arm_thrusters.cpp  is_pipeline_found.cpp  is_pipeline_inspected.cpp  set_guided_mode.cpp  suave_mission.cpp
suave_rosa_plansys/: CMakeLists.txt  package.xml
suave_rosa_plansys/include/suave_rosa_plansys/: action_start_robot.hpp
suave_rosa_plansys/launch/: suave_rosa_extended_plansys.launch.py  suave_rosa_plansys.launch.py
suave_rosa_plansys/pddl/: suave_domain.pddl  suave_extended_problem.pddl  suave_problem.pddl
suave_rosa_plansys/src/: action_inspect_pipeline.cpp  action_recharge.cpp  action_search_pipeline.cpp  action_start_robot.cpp  suave_rosa_controller.cpp
suave_rosa_runner/: package.xml  setup.cfg  setup.py
suave_rosa_runner/config/: runner_config.yml
suave_rosa_runner/launch/: suave_runner_launch.py
