<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>suave_rosa_bt</name>
  <version>0.0.0</version>
  <description>Applying ROSA to SUAVE</description>
  <maintainer email="g.rezendesilva@tudelft.nl">Gustavo Rezende</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosa_task_plan_bt</build_depend>
  <build_depend>suave_bt</build_depend>

  <depend>rosa_kb</depend>
  <depend>rosa_msgs</depend>
  <depend>rosa_bringup</depend>
  <depend>suave</depend>
  <depend>suave_msgs</depend>
  <depend>behaviortree_cpp</depend>
  <depend>behaviortree_cpp_dbgsym</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
